--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,18 @@
   {%- include head.html -%}
 
   <body>
+      {% include header.html %}
 
-    {%- include header.html -%}
-
+      <!--
     <div class="py-5">
       <div class="container page-content">
+-->
+
           {{ content }}
+<!--
       </div>
     </div>
+-->
 
     {%- include footer.html -%}
 
